force-app/main/default/objects/AM_Investments_Profits__c/AM_Investments_Profits__c.object-meta.xml
<CustomObject>
    <label>AM Investments Profits</label>
    <nameField>
        <displayFormat>AMINV-{0000}</displayFormat>
        <label>AM In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Investments Profits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>