force-app/main/default/objects/AM_Investments_Profits__c/fields/AM_Closing_Stock__c.field-meta.xml
<CustomField>
    <fullName>AM_Closing_Stock__c</fullName>
    <label>AM Closing Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>