force-app/main/default/objects/AM_Investments_Profits__c/fields/AM_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Investment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AM Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>