force-app/main/default/objects/AM_Investments_Profits__c/fields/AM_Investment_Month__c.field-meta.xml
<CustomField>
    <fullName>AM_Investment_Month__c</fullName>
    <label>AM Investment Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>