force-app/main/default/objects/AM_Investments_Profits__c/fields/AM_Investment_Profits__c.field-meta.xml
<CustomField>
    <fullName>AM_Investment_Profits__c</fullName>
    <label>AM_Investment_Profits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>