force-app/main/default/objects/AM_Investments_Profits__c/fields/AM_Investment_Year__c.field-meta.xml
<CustomField>
    <fullName>AM_Investment_Year__c</fullName>
    <label>AM Investment Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>