force-app/main/default/objects/AM_Investments_Profits__c/fields/AM_Opening_Stock__c.field-meta.xml
<CustomField>
    <fullName>AM_Opening_Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AM Opening Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>